# dir-monitor

./: .gitignore  CMakeLists.txt  README  README.md  debug.h  dir-monitor.c  dir-monitor.h  dm-manager.c  dm-manager.h  internals.h  main.c  simulate_dir_changes.bash
